# dx_app

./: run_multi_demo.sh
demos/object_detection/: od.cpp  yolo_multi_channels.cpp
internal/npu_usage/: CMakeLists.txt  README.md  aging_test.py  build.sh  npu_usage.cpp
tests/compare_e2e_report/: README.md  compare_reports.py  sample_threshold.json
tests/cpp_example/: performance_collector.py  test_e2e.py
